# rust_codingame

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
marslander/: Cargo.toml  README.md
marslander/src/: cartesian.rs  genetic.rs  lander.rs  lib.rs  physics.rs
puzzles/single_player/medium/marslander2/: Cargo.toml  README.md  build.rs
puzzles/single_player/medium/marslander2/examples/: main.rs
puzzles/single_player/medium/marslander2/examples/bundle/: main.rs
puzzles/single_player/medium/marslander2/src/: env.rs  game.rs  lib.rs
