[package]
name = "rust_codingame"
version = "0.1.0"
authors = ["Ron Lobo <code@ronlobo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  ".",
  "marslander",
  "puzzles/single_player/medium/marslander2",
]
