[package]
name = "marslander2"
version = "0.1.0"
authors = ["Ron Lobo <code@ronlobo.com>"]
edition = "2018"
include = ["bin/bundler.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See available packages for Rust at https://www.codingame.com/faq
[dependencies]
chrono = "0.4.9"
itertools = "0.8.0"
libc = "0.2.62"
rand = "0.7.2"
regex = "1.3.0"
time = "0.1.42"
marslander = { path = "../../../../marslander" }

[build-dependencies]
rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler" }
